@@ -302,6 +302,9 @@ These are the available compatibility levels:
 
 This is the lowest supported compatibility level.
 
+If you are upgrading from an earlier compatibility level, please
+review L<debhelper-obsolete-compat(7)>.
+
 =item v6
 
 Changes from v5 are:
