@@ -12,6 +12,9 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
     the initial patch.  (Closes: #836988)
   * dh_md5sums.1: Mention dpkg --verify as a consumer of the
     output file.  Thanks to Guillem Jover for reporting it.
+  * debhelper-obsolete-compat.pod: Add a manpage for the
+    upgrade checklist for all obsolete/removed compat levels.
+    Thanks to Jakub Wilk for the suggestion.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
 
